force-app/main/default/objects/AstreinteCadre__c/AstreinteCadre__c.object-meta.xml
<CustomObject>
    <description>Cet objet permet de définir les temps d&apos;astreinte des cadres.</description>
    <label>Astreinte cadre</label>
    <nameField>
        <label>Nom du cadre d&apos;astreinte</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Astreinte cadres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>