force-app/main/default/objects/AstreinteCadre__c/fields/AC_AstreinteEnCours__c.field-meta.xml
<CustomField>
    <fullName>AC_AstreinteEnCours__c</fullName>
    <description>Ce champ formule vient comparer la date/heure du jour avec les dates d&apos;astreinte, pour renvoyer Vrai si l&apos;astreinte est en cours. En lecture seule.</description>
    <formula>AND(
				(NOW() &lt;=  AC_DateFindAstreinte__c) ,
				(NOW()&gt;= AC_DateDebutdAstreinte__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ce champ formule vient comparer la date/heure du jour avec les dates d&apos;astreinte, pour renvoyer Vrai si l&apos;astreinte est en cours. En lecture seule.</inlineHelpText>
    <label>Astreinte en cours</label>
    <type>Checkbox</type>
</CustomField>