force-app/main/default/objects/AstreinteCadre__c/fields/AC_DateDebutdAstreinte__c.field-meta.xml
<CustomField>
    <fullName>AC_DateDebutdAstreinte__c</fullName>
    <label>Date début d&apos;astreinte</label>
    <type>DateTime</type>
</CustomField>