force-app/main/default/objects/AstreinteCadre__c/fields/AC_DateFindAstreinte__c.field-meta.xml
<CustomField>
    <fullName>AC_DateFindAstreinte__c</fullName>
    <label>Date fin d&apos;astreinte</label>
    <type>DateTime</type>
</CustomField>