force-app/main/default/objects/AstreinteCadre__c/fields/AC_Email__c.field-meta.xml
<CustomField>
    <fullName>AC_Email__c</fullName>
    <formula>AC_Utilisateur__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>