force-app/main/default/objects/AstreinteCadre__c/fields/AC_NumeroDeMobile__c.field-meta.xml
<CustomField>
    <fullName>AC_NumeroDeMobile__c</fullName>
    <formula>AC_Utilisateur__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de mobile</label>
    <type>Text</type>
</CustomField>