force-app/main/default/objects/AstreinteCadre__c/fields/AC_NumeroDeTelephone__c.field-meta.xml
<CustomField>
    <fullName>AC_NumeroDeTelephone__c</fullName>
    <formula>AC_Utilisateur__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de téléphone</label>
    <type>Text</type>
</CustomField>