force-app/main/default/objects/AstreinteCadre__c/fields/AC_TerritoireDeService__c.field-meta.xml
<CustomField>
    <fullName>AC_TerritoireDeService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territoire de service</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Astreinte cadres</relationshipLabel>
    <relationshipName>Astreinte_cadres</relationshipName>
    <type>Lookup</type>
</CustomField>