force-app/main/default/objects/AstreinteCadre__c/fields/AC_Utilisateur__c.field-meta.xml
<CustomField>
    <fullName>AC_Utilisateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sélectionner l&apos;utilisateur pour définir le cadre d&apos;astreinte.</inlineHelpText>
    <label>Utilisateur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Astreinte_cadres</relationshipName>
    <type>Lookup</type>
</CustomField>