force-app/main/default/objects/AstreinteCadre__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AC_DateDebutdAstreinte__c</columns>
    <columns>AC_DateFindAstreinte__c</columns>
    <columns>AC_AstreinteEnCours__c</columns>
    <columns>AC_NumeroDeMobile__c</columns>
    <columns>AC_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les cadres d&apos;astreinte</label>
</ListView>