force-app/main/default/objects/AstreinteCadre__c/listViews/Cadre_d_astreinte_en_cours_France.listView-meta.xml
<ListView>
    <fullName>Cadre_d_astreinte_en_cours_France</fullName>
    <columns>NAME</columns>
    <columns>AC_DateDebutdAstreinte__c</columns>
    <columns>AC_DateFindAstreinte__c</columns>
    <columns>AC_AstreinteEnCours__c</columns>
    <columns>AC_NumeroDeMobile__c</columns>
    <columns>AC_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AC_AstreinteEnCours__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cadre d&apos;astreinte en cours</label>
</ListView>